--- a/Planetarium/resources/css/main.css
+++ b/Planetarium/resources/css/main.css
@@ -1,3 +1,8 @@
+img
+{
+    max-width: 100%;
+}
+
 .section--top
 {
     background: url("../images/fon.jpg");
@@ -102,7 +107,6 @@
 .img--about
 {
     width: 533px;
-    height: 800px;
 }
 
 .section--about .about--text--bold
@@ -147,11 +151,10 @@
 .section--what
 {
     margin-bottom: 80px;
-
+    background-size:cover;
     background: url("../images/fon2.jpg");
-    height: 1051px;
-    background-repeat: no-repeat;
-    background-position-x: center;
+    /* background-repeat: no-repeat; */
+    /* background-position-x: center; */
 
 }
 
@@ -275,28 +278,29 @@
 
 .img--map
 {
-    width: 660px;
+    max-width: 100%;
     height: 374px;
-    box-shadow: 0px 4px 26px;
+    box-shadow: 0px 4px 26px rgba(0, 0, 0, 0.25);
     border-radius: 26px;
+
 
     margin-bottom: 118px;
 }
 
 .textcols
 {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .textcols-left
 {
-	float: left;
-	width: 48%;
+    float: left;
+    width: 48%;
 }
 
 .textcols-right
 {
-	margin-left: 52%;
+    margin-left: 52%;
 }
 
 .text--bl
@@ -378,18 +382,19 @@
     margin-bottom: 120px;
 }
 
-.anim-img
-  {
+.anim-img .img--what
+{
     z-index: 1;
     -webkit-transition: all ease 500ms;
     -o-transition: all ease 500ms;
     transition: all ease 500ms;
-  }
+    border-radius: 50%;
+}
 
-.anim-img:hover
-  {
-    -webkit-box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.3);
+.img--what:hover
+{
+    -webkit-box-shadow: 2px 2px 30px 2px rgba(255, 255, 255, 0.3);
+    box-shadow: 2px 2px 30px 2px rgba(255, 255, 255, 0.3);
     z-index: 10;
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
@@ -397,11 +402,11 @@
     -webkit-transition: all ease 500ms;
     -o-transition: all ease 500ms;
     transition: all ease 500ms;
-  }
+}
 
 
-  @media (max-width: 1400px)
-  {
+@media (max-width: 1400px)
+{
     .section--top .information--text--bold
     {
         font-size: 60px;
@@ -432,11 +437,6 @@
     {
         text-align: center;
         margin-bottom: 15px;
-    }
-
-    .section--what
-    {
-        height: 1000px;
     }
 
     .section--what .what--text--tight
@@ -522,21 +522,33 @@
         transform: translate(-50%, 0);
     }
 
-  }
+}
 
-  @media (max-width: 1600px)
-  {
-      .section--join .img--map
-      {
-          width: 500px;
-          height: 300px;
+@media (max-width: 1600px)
+{
+    .section--join .img--map
+    {
+        margin-top: 15px;
 
-          margin-top: 15px;
+        margin-bottom: 80px;
 
-          margin-bottom: 80px;
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+}
 
-          position: relative;
-          left: 50%;
-          transform: translate(-50%, 0);
-      }
-  }
+/* unvisited link */
+a:link {
+    color: #FFF;
+}
+
+/* visited link */
+a:visited {
+    color: #FFF;
+}
+
+/* mouse over link */
+a:hover {
+    color: #FFF;
+}
