--- a/Planetarium/public/css/main.css
+++ b/Planetarium/public/css/main.css
@@ -1,661 +1,1 @@
-img
-{
-    max-width: 100%;
-}
-
-.section--top
-{
-    background: url(/images/fon.jpg?aae42ca9dec49f096944b4ee71453405);
-    background-repeat: no-repeat;
-    background-position-x: center;
-}
-
-.section--top .text--event
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-
-    color: #FFFFFF;
-}
-
-.block-event
-{
-    padding-top: 50px;
-    margin-bottom: 160px;
-}
-
-.ellips
-{
-    margin-right: 37px;
-}
-
-
-.section--top .information--text--tight
-{
-    text-align: center;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 200;
-    font-size: 42px;
-    line-height: 51px;
-
-    color: #FFFFFF;
-}
-
-.section--top .information--text--bold
-{
-    text-align: center;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 64px;
-    line-height: 78px;
-
-    color: #FFFFFF;
-
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-.btn--other
-{
-    width: 344px;
-    height: 84px;
-
-    background: #FFFFFF;
-    border-radius: 124px;
-
-    margin-top: 140px;
-
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 24px;
-
-    color: #000000;
-
-    border: none;
-
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
-
-.next
-{
-    width: 79px;
-    height: 90px;
-
-    margin-top: 73px;
-    margin-bottom: 65px;
-
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
-
-.section--about
-{
-    padding-top: 95px;
-    padding-bottom: 95px;
-}
-
-.img--about
-{
-    width: 533px;
-}
-
-.section--about .about--text--bold
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 48px;
-    line-height: 59px;
-
-    text-align: left;
-
-    color: #000000;
-
-    margin-bottom: 80px;
-}
-
-.section--about .about--text--tight
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 36px;
-    line-height: 44px;
-
-    color: #000000;
-}
-
-.telescope
-{
-    width: 131px;
-    height: 130px;
-
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-
-    margin-top: 75px;
-    margin-bottom: 75px;
-}
-
-.section--what
-{
-    margin-bottom: 80px;
-    background-size:cover;
-    background: url(/images/fon2.jpg?20cc3db9f4148728b6ed67d2223e1c2c);
-
-}
-
-.section--what .what--text--bold
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 48px;
-    line-height: 59px;
-
-    text-align: center;
-
-    color: #FFFFFF;
-
-    margin-bottom: 60px;
-    margin-top: 80px;
-}
-
-.section--what .what--text--tight
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 200;
-    font-size: 42px;
-    line-height: 51px;
-    text-align: center;
-
-    color: #FFFFFF;
-
-    margin-bottom: 68px;
-}
-
-.section--what .what--text--mini
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-
-    color: #FFFFFF;
-
-    margin-top: 68px;
-    margin-bottom: 68px;
-}
-
-.section--what .what--text--mini-info
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-
-    color: #FFFFFF;
-
-    margin-top: 0px;
-    margin-bottom: 68px;
-}
-
-.btn--what
-{
-    width: 344px;
-    height: 84px;
-
-    background: #FFFFFF;
-    border-radius: 124px;
-
-    margin-bottom: 68px;
-
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 24px;
-
-    color: #000000;
-
-    border-color: none;
-
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-
-    border: none;
-}
-
-.section--join
-{
-
-}
-
-.section--join .join--text--bold
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 48px;
-    line-height: 59px;
-
-    text-align: center;
-
-    color: #000000;
-
-    margin-bottom: 97px;
-}
-
-.section--join .join--text--tight
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 44px;
-
-    color: #000000;
-
-    margin-bottom: 20px;
-}
-
-.section--join .join--text--normal
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 44px;
-
-    color: #000000;
-
-    margin-bottom: 80px;
-}
-
-.img--map
-{
-    max-width: 100%;
-    height: 374px;
-    box-shadow: 0px 4px 26px rgba(0, 0, 0, 0.25);
-    border-radius: 26px;
-
-
-    margin-bottom: 118px;
-}
-
-.textcols
-{
-    overflow: hidden;
-}
-
-.textcols-left
-{
-    float: left;
-    width: 48%;
-}
-
-.textcols-right
-{
-    margin-left: 52%;
-}
-
-.text--bl
-{
-    margin-bottom: 180px;
-}
-
-.footer
-{
-    background-color: black;
-}
-
-.footer .mobile--text
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 48px;
-    line-height: 59px;
-
-    text-align: center;
-    -webkit-text-decoration-line: underline;
-            text-decoration-line: underline;
-
-    color: #FFFFFF;
-
-    margin-top: 57px;
-    margin-bottom: 90px;
-}
-
-.img--int
-{
-    width: 46px;
-    height: 48px;
-}
-
-.img--int--1
-{
-    width: 46px;
-    height: 48px;
-}
-
-.img--int--3
-{
-    width: 46px;
-    height: 48px;
-
-    margin-bottom: 90px;
-}
-
-.footer .footer--text
-{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 36px;
-    line-height: 44px;
-
-    text-align: center;
-
-    color: #FFFFFF;
-
-    margin-bottom: 90px;
-}
-
-.img--footer
-{
-    margin-bottom: 120px;
-}
-
-.anim-img .img--what
-{
-    z-index: 1;
-    transition: all ease 500ms;
-    border-radius: 50%;
-}
-
-.img--what:hover
-{
-    box-shadow: 2px 2px 30px 2px rgba(255, 255, 255, 0.3);
-    z-index: 10;
-    transform: scale(1.1);
-    transition: all ease 500ms;
-}
-
-
-@media (max-width: 1400px)
-{
-    .section--top .information--text--bold
-    {
-        font-size: 60px;
-    }
-
-    .section--top .text--event
-    {
-        font-size: 15px;
-    }
-
-    .section--top .information--text--tight
-    {
-        font-size: 30px;
-    }
-
-    .section--top .btn--other
-    {
-        width: 300px;
-        height: 70px;
-
-        margin-top: 70px;
-    }
-
-    .section--about .img--about
-    {
-        position: relative;
-        left: 50%;
-        transform: translate(-50%, 0);
-        margin-bottom: 40px;
-    }
-
-    .section--about .about--text--bold
-    {
-        text-align: center;
-        margin-bottom: 15px;
-    }
-
-    .section--what .what--text--tight
-    {
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
-
-    .section--what .what--text--bold
-    {
-        font-size: 40px;
-        margin-bottom: 10px;
-        margin-top: 40px;
-    }
-
-    .section--what .what--text--mini
-    {
-        font-size: 15px;
-        margin-bottom: 50px;
-        margin-top: 40px;
-    }
-
-    .section--what .what--text--mini-info
-    {
-        font-size: 15px;
-        margin-bottom: 0px;
-        margin-top: 40px;
-    }
-
-    .section--what .img--what
-    {
-        width: 180px;
-        height: 180px;
-
-        position: relative;
-        left: 50%;
-        transform: translate(-50%, 0);
-    }
-
-    .section--what .img--media
-    {
-        margin-top: 10px;
-    }
-
-    .section--what .btn--what
-    {
-        width: 300px;
-        height: 70px;
-
-        margin-bottom: 40px;
-    }
-
-    .section--join .join--text--tight
-    {
-        font-size: 30px;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-
-    .section--join .more--text
-    {
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-    .section--join .join--text--bold
-    {
-        font-size: 36px;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    .section--join .join--text--normal
-    {
-        font-size: 27px;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-
-    .section--join .text--bl
-    {
-        margin-bottom: 40px;
-    }
-
-    .footer .img--footer
-    {
-        width: 120px;
-
-        position: relative;
-        left: 50%;
-        transform: translate(-50%, 0);
-    }
-
-}
-
-@media (max-width: 1600px)
-{
-    .section--join .img--map
-    {
-        margin-top: 15px;
-
-        margin-bottom: 80px;
-
-        position: relative;
-        left: 50%;
-        transform: translate(-50%, 0);
-    }
-}
-
-@media (max-width: 800px)
-{
-    .section--top .information--text--bold
-    {
-        font-size: 40px;
-    }
-
-    .section--top .information--text--tight
-    {
-        font-size: 25px;
-    }
-
-    .section--top .block-event
-    {
-        padding-top: 50px;
-        margin-bottom: 80px;
-    }
-
-    .section--about .about--text--bold
-    {
-        font-size: 36px;
-    }
-
-    .section--about .about--text--tight
-    {
-        font-size: 24px;
-    }
-
-    .section--what .what--text--bold
-    {
-        font-size: 36px;
-    }
-
-    .section--what .what--text--tight
-    {
-        font-size: 24px;
-    }
-
-    .section--join .join--text--bold
-    {
-        font-size: 36px;
-    }
-
-    .section--join .join--text--tight
-    {
-        font-size: 24px;
-        text-align: center;
-    }
-
-    .footer .mobile--text
-    {
-        font-size: 30px;
-    }
-
-    .footer .footer--text
-    {
-        font-size: 24px;
-    }
-
-    .footer .img--footer
-    {
-        width: 80px;
-    }
-}
-
-/* unvisited link */
-a:link {
-    color: #FFF;
-}
-
-/* visited link */
-a:visited {
-    color: #FFF;
-}
-
-/* mouse over link */
-a:hover {
-    color: #FFF;
-}
-
-/* quick reset */
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-
-/* relevant styles */
-.img__wrap {
-    position: relative;
-    height: 200px;
-    width: 257px;
-}
-
-.img__description {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(29, 106, 154, 0.72);
-    color: #fff;
-    visibility: hidden;
-    opacity: 0;
-
-    /* transition effect. not necessary */
-    transition: opacity .2s, visibility .2s;
-}
-
-.img__wrap:hover .img__description {
-    visibility: visible;
-    opacity: 1;
-}
-
+img{max-width:100%}.section--top{background:url(/images/fon.jpg?aae42ca9dec49f096944b4ee71453405);background-position-x:center;background-repeat:no-repeat}.section--top .text--event{color:#fff;font-family:Montserrat;font-size:20px;font-style:normal;font-weight:500;line-height:24px}.block-event{margin-bottom:160px;padding-top:50px}.ellips{margin-right:37px}.section--top .information--text--tight{color:#fff;font-family:Montserrat;font-size:42px;font-style:normal;font-weight:200;line-height:51px;text-align:center}.section--top .information--text--bold{color:#fff;font-family:Montserrat;font-size:64px;font-style:normal;font-weight:600;line-height:78px;padding-bottom:50px;padding-top:50px;text-align:center}.btn--other{background:#fff;border:none;border-radius:124px;color:#000;font-family:Montserrat;font-size:20px;font-style:normal;font-weight:400;height:84px;line-height:24px;margin-top:140px;width:344px}.btn--other,.next{left:50%;position:relative;transform:translate(-50%)}.next{height:90px;margin-bottom:65px;margin-top:73px;width:79px}.section--about{padding-bottom:95px;padding-top:95px}.img--about{width:533px}.section--about .about--text--bold{color:#000;font-family:Montserrat;font-size:48px;font-style:normal;font-weight:800;line-height:59px;margin-bottom:80px;text-align:left}.section--about .about--text--tight{color:#000;font-family:Montserrat;font-size:36px;font-style:normal;font-weight:300;line-height:44px}.telescope{height:130px;left:50%;margin-bottom:75px;margin-top:75px;position:relative;transform:translate(-50%);width:131px}.section--what{background-size:cover;background:url(/images/fon2.jpg?20cc3db9f4148728b6ed67d2223e1c2c);margin-bottom:80px}.section--what .what--text--bold{color:#fff;font-family:Montserrat;font-size:48px;font-style:normal;font-weight:800;line-height:59px;margin-bottom:60px;margin-top:80px;text-align:center}.section--what .what--text--tight{font-size:42px;font-weight:200;line-height:51px}.section--what .what--text--mini,.section--what .what--text--tight{color:#fff;font-family:Montserrat;font-style:normal;margin-bottom:68px;text-align:center}.section--what .what--text--mini{font-size:24px;font-weight:300;line-height:29px;margin-top:68px}.section--what .what--text--mini-info{color:#fff;font-size:24px;font-weight:300;line-height:29px;margin-top:0;text-align:center}.btn--what,.section--what .what--text--mini-info{font-family:Montserrat;font-style:normal;margin-bottom:68px}.btn--what{background:#fff;border:none;border-radius:124px;color:#000;font-size:20px;font-weight:400;height:84px;left:50%;line-height:24px;position:relative;transform:translate(-50%);width:344px}.section--join .join--text--bold{color:#000;font-family:Montserrat;font-size:48px;font-style:normal;font-weight:800;line-height:59px;margin-bottom:97px;text-align:center}.section--join .join--text--tight{font-weight:400;margin-bottom:20px}.section--join .join--text--normal,.section--join .join--text--tight{color:#000;font-family:Montserrat;font-size:36px;font-style:normal;line-height:44px}.section--join .join--text--normal{font-weight:600;margin-bottom:80px}.img--map{border-radius:26px;box-shadow:0 4px 26px rgba(0,0,0,.25);height:374px;margin-bottom:118px;max-width:100%}.textcols{overflow:hidden}.textcols-left{float:left;width:48%}.textcols-right{margin-left:52%}.text--bl{margin-bottom:180px}.footer{background-color:#000}.footer .mobile--text{color:#fff;font-family:Montserrat;font-size:48px;font-style:normal;font-weight:800;line-height:59px;margin-bottom:90px;margin-top:57px;text-align:center;-webkit-text-decoration-line:underline;text-decoration-line:underline}.img--int,.img--int--1,.img--int--3{height:48px;width:46px}.img--int--3{margin-bottom:90px}.footer .footer--text{color:#fff;font-family:Montserrat;font-size:36px;font-style:normal;font-weight:300;line-height:44px;margin-bottom:90px;text-align:center}.img--footer{margin-bottom:120px}.anim-img .img--what{border-radius:50%;transition:all .5s ease;z-index:1}.img--what:hover{box-shadow:2px 2px 30px 2px hsla(0,0%,100%,.3);transform:scale(1.1);transition:all .5s ease;z-index:10}@media (max-width:1400px){.ellips{display:none}.section--top .information--text--bold{font-size:60px}.section--top .text--event{font-size:15px}.section--top .information--text--tight{font-size:30px}.section--top .btn--other{height:70px;margin-top:70px;width:300px}.section--about .img--about{left:50%;margin-bottom:40px;position:relative;transform:translate(-50%)}.section--about .about--text--bold{margin-bottom:15px;text-align:center}.section--what .what--text--tight{font-size:30px;margin-bottom:20px}.section--what .what--text--bold{font-size:40px;margin-bottom:10px;margin-top:40px}.section--what .what--text--mini{font-size:15px;margin-bottom:50px;margin-top:40px}.section--what .what--text--mini-info{font-size:15px;margin-bottom:0;margin-top:40px}.section--what .img--what{height:180px;left:50%;position:relative;transform:translate(-50%);width:180px}.section--what .img--media{margin-top:10px}.section--what .btn--what{height:70px;margin-bottom:40px;width:300px}.section--join .join--text--tight{font-size:30px;margin-bottom:10px;text-align:center}.section--join .more--text{margin-bottom:15px;margin-top:15px}.section--join .join--text--bold{font-size:36px;margin-bottom:0;margin-top:0}.section--join .join--text--normal{font-size:27px;margin-bottom:10px;text-align:center}.section--join .text--bl{margin-bottom:40px}.footer .img--footer{left:50%;position:relative;transform:translate(-50%);width:120px}}@media (max-width:1600px){.section--join .img--map{left:50%;margin-bottom:80px;margin-top:15px;position:relative;transform:translate(-50%)}}@media (max-width:800px){.section--top .information--text--bold{font-size:40px}.section--top .information--text--tight{font-size:25px}.section--top .block-event{margin-bottom:80px;padding-top:50px}.section--about .about--text--bold{font-size:36px}.section--about .about--text--tight{font-size:24px}.section--what .what--text--bold{font-size:36px}.section--what .what--text--tight{font-size:24px}.section--join .join--text--bold{font-size:36px}.section--join .join--text--tight{font-size:24px;text-align:center}.footer .mobile--text{font-size:30px}.footer .footer--text{font-size:24px}.footer .img--footer{width:80px}}a:hover,a:link,a:visited{color:#fff}*{border:0;margin:0;padding:0}.img__wrap{height:200px;position:relative;width:257px}.img__description{background:rgba(29,106,154,.72);bottom:0;color:#fff;left:0;opacity:0;position:absolute;right:0;top:0;transition:opacity .2s,visibility .2s;visibility:hidden}.img__wrap:hover .img__description{opacity:1;visibility:visible}
